{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 101,
  "lineage": "3e37191c-92ff-4c6a-7432-4efe363d6166",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd77a44cb0dad4bb",
            "arn": "arn:aws:ec2:sa-east-1:547029308115:elastic-ip/eipalloc-0cd77a44cb0dad4bb",
            "association_id": "eipassoc-032cc71c48ac82f29",
            "domain": "vpc",
            "id": "eipalloc-0cd77a44cb0dad4bb",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-068ef1e610a3cc7a9",
            "private_dns": "ip-10-1-0-150.sa-east-1.compute.internal",
            "private_ip": "10.1.0.150",
            "public_dns": "ec2-54-94-46-65.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.94.46.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-EIP-0"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-EIP-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:internet-gateway/igw-0e9acfb127825d6aa",
            "id": "igw-0e9acfb127825d6aa",
            "owner_id": "547029308115",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-IG"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-IG"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd77a44cb0dad4bb",
            "association_id": "eipassoc-032cc71c48ac82f29",
            "connectivity_type": "public",
            "id": "nat-0739ecea6ac9a91b6",
            "network_interface_id": "eni-068ef1e610a3cc7a9",
            "private_ip": "10.1.0.150",
            "public_ip": "54.94.46.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ec33ddad4c46e29",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-NATGW-0"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-NATGW-0"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:network-acl/acl-0291eeaab0188692c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.0.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 801,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.2.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 802,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "3.5.232.0/22",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 803,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.163.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 804,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.164.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 805,
                "to_port": 0
              }
            ],
            "id": "acl-0291eeaab0188692c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 1,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 301,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.1.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 302,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.10.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 401,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.11.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 402,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.12.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 403,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.2.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 303,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.5.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 201,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.6.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 202,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.7.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 203,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.0.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 801,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.2.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 802,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "3.5.232.0/22",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 803,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.163.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 804,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.164.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 805,
                "to_port": 0
              }
            ],
            "owner_id": "547029308115",
            "subnet_ids": [
              "subnet-035f1f4e847aa5bb6",
              "subnet-096b21d8817cc1694",
              "subnet-0e5e219090ecc593d"
            ],
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-ACL-Private",
              "Scheme": "private"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-ACL-Private",
              "Scheme": "private"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:network-acl/acl-051b2023eeff90e77",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-051b2023eeff90e77",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 501,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 401,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 201,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1194,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 104,
                "to_port": 1194
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 103,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 102,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.5.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 601,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.6.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 602,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.7.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 603,
                "to_port": 0
              }
            ],
            "owner_id": "547029308115",
            "subnet_ids": [
              "subnet-00ec33ddad4c46e29",
              "subnet-06e49870dbdc23e4b",
              "subnet-08b1d08c6678db557"
            ],
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-ACL-Public",
              "Scheme": "public"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-ACL-Public",
              "Scheme": "public"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:network-acl/acl-0e109ec87a3a39b61",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.1.10.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.11.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.12.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 3,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.5.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.6.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 102,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.7.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 103,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.0.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 501,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.2.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 502,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "3.5.232.0/22",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 503,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.163.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 504,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.164.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 505,
                "to_port": 0
              }
            ],
            "id": "acl-0e109ec87a3a39b61",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.1.10.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.11.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 102,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.12.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 103,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.5.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 201,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.6.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 202,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.1.7.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 203,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.0.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 501,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "16.12.2.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 502,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "3.5.232.0/22",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 503,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.163.0/24",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 504,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "52.95.164.0/23",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 505,
                "to_port": 0
              }
            ],
            "owner_id": "547029308115",
            "subnet_ids": [
              "subnet-03c629408074d0766",
              "subnet-04f1401b7a5fd5f87",
              "subnet-0d79d8412c61cbc1e"
            ],
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-ACL-Secure",
              "Scheme": "secure"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-ACL-Secure",
              "Scheme": "secure"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_private_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.5.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1083737098",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 201,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.6.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3648709131",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 202,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.7.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-418659787",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 203,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_private_from_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.0.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2634964367",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 301,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.1.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-82590606",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 302,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.2.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3311592526",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 303,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_private_from_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.0.0/23",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2059919916",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 801,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.2.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3810886701",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 802,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "3.5.232.0/22",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-581655533",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 803,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.163.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-194006638",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 804,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.164.0/23",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3391001006",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 805,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_private_from_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.10.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3766311895",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 401,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.11.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2040479190",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 402,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.12.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3088179734",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 403,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_private_from_world_icmp_reply",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": -1,
            "icmp_type": 0,
            "id": "nacl-1258676171",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_private_from_world_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1903129812",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 1,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_public_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.5.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-150565277",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 601,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.6.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2434471836",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 602,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.7.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1351993436",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 603,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_public_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": -1,
            "icmp_type": 0,
            "id": "nacl-1698976865",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "1",
            "rule_action": "allow",
            "rule_number": 501,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_public_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2320499978",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 1,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_public_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2861471327",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3708830895",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1186269376",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1194,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-841867599",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 104,
            "to_port": 1194
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_public_tcp_return",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3606033284",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 201,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_public_udp_return",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2480835026",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 401,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_secure_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.5.0/24",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2221434929",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 201,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.6.0/24",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-495586864",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 202,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.7.0/24",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3691303408",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 203,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_secure_from_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.0.0/23",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4179324521",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 501,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.2.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1626933352",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 502,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "3.5.232.0/22",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2708985768",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 503,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.163.0/24",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2286731819",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 504,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.164.0/23",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1237458411",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 505,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "in_secure_from_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.10.0/24",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-966919423",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.11.0/24",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2688574206",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.12.0/24",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1640938814",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "out_private_to_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.0.0/23",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2916418612",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 801,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.2.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1189265207",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 802,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "3.5.232.0/22",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2837500937",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 803,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.163.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1274859376",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 804,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.164.0/23",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2755568718",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 805,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "out_private_to_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3460032643",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0291eeaab0188692c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 1,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "out_public_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-259764803",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-051b2023eeff90e77",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_network_acl.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "out_secure_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.5.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2715467100",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.6.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1257047647",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.7.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2771348833",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "out_secure_to_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.0.0/23",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2732361251",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 501,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "16.12.2.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1240153376",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 502,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "3.5.232.0/22",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2787726878",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 503,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.163.0/24",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1156926823",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 504,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "52.95.164.0/23",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2872518233",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 505,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_ec2_managed_prefix_list.s3",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "out_secure_to_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.10.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4138336575",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 1,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.11.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-496876092",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 2,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.12.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4066365698",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e109ec87a3a39b61",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 3,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_network_acl.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004266d28b5ee0b2e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0739ecea6ac9a91b6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004266d28b5ee0b2e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9acfb127825d6aa",
            "id": "r-rtb-0c01bb3b4238222771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c01bb3b423822277",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.default",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:route-table/rtb-004266d28b5ee0b2e",
            "id": "rtb-004266d28b5ee0b2e",
            "owner_id": "547029308115",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0739ecea6ac9a91b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-RouteTable-Private-0",
              "Scheme": "private"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-RouteTable-Private-0",
              "Scheme": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:route-table/rtb-0c01bb3b423822277",
            "id": "rtb-0c01bb3b423822277",
            "owner_id": "547029308115",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9acfb127825d6aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-RouteTable-Public",
              "Scheme": "public"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-RouteTable-Public",
              "Scheme": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:route-table/rtb-0d7aae3e1fdfc5851",
            "id": "rtb-0d7aae3e1fdfc5851",
            "owner_id": "547029308115",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-RouteTable-Secure",
              "Scheme": "secure"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-RouteTable-Secure",
              "Scheme": "secure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079619421e024e0a4",
            "route_table_id": "rtb-004266d28b5ee0b2e",
            "subnet_id": "subnet-035f1f4e847aa5bb6"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a7b5b54bac3f126",
            "route_table_id": "rtb-004266d28b5ee0b2e",
            "subnet_id": "subnet-0e5e219090ecc593d"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcbce166375faaf3",
            "route_table_id": "rtb-004266d28b5ee0b2e",
            "subnet_id": "subnet-096b21d8817cc1694"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0310c4e7f7aee321c",
            "route_table_id": "rtb-0c01bb3b423822277",
            "subnet_id": "subnet-00ec33ddad4c46e29"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060980d79c7376bf4",
            "route_table_id": "rtb-0c01bb3b423822277",
            "subnet_id": "subnet-06e49870dbdc23e4b"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0437af3c5bc7f8718",
            "route_table_id": "rtb-0c01bb3b423822277",
            "subnet_id": "subnet-08b1d08c6678db557"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a5c6781f6d05fba",
            "route_table_id": "rtb-0d7aae3e1fdfc5851",
            "subnet_id": "subnet-03c629408074d0766"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074cf5acf117ab438",
            "route_table_id": "rtb-0d7aae3e1fdfc5851",
            "subnet_id": "subnet-0d79d8412c61cbc1e"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025d7bb3621501f02",
            "route_table_id": "rtb-0d7aae3e1fdfc5851",
            "subnet_id": "subnet-04f1401b7a5fd5f87"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.secure",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.secure",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-035f1f4e847aa5bb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035f1f4e847aa5bb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Private-A",
              "Scheme": "private",
              "aws-cdk:subnet-name": "Private",
              "aws-cdk:subnet-type": "Private"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Private-A",
              "Scheme": "private",
              "aws-cdk:subnet-name": "Private",
              "aws-cdk:subnet-type": "Private"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-0e5e219090ecc593d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e219090ecc593d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Private-B",
              "Scheme": "private",
              "aws-cdk:subnet-name": "Private",
              "aws-cdk:subnet-type": "Private"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Private-B",
              "Scheme": "private",
              "aws-cdk:subnet-name": "Private",
              "aws-cdk:subnet-type": "Private"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-096b21d8817cc1694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096b21d8817cc1694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Private-C",
              "Scheme": "private",
              "aws-cdk:subnet-name": "Private",
              "aws-cdk:subnet-type": "Private"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Private-C",
              "Scheme": "private",
              "aws-cdk:subnet-name": "Private",
              "aws-cdk:subnet-type": "Private"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-00ec33ddad4c46e29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec33ddad4c46e29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Public-A",
              "Scheme": "public",
              "aws-cdk:subnet-name": "Public",
              "aws-cdk:subnet-type": "Public"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Public-A",
              "Scheme": "public",
              "aws-cdk:subnet-name": "Public",
              "aws-cdk:subnet-type": "Public"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-06e49870dbdc23e4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e49870dbdc23e4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Public-B",
              "Scheme": "public",
              "aws-cdk:subnet-name": "Public",
              "aws-cdk:subnet-type": "Public"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Public-B",
              "Scheme": "public",
              "aws-cdk:subnet-name": "Public",
              "aws-cdk:subnet-type": "Public"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-08b1d08c6678db557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b1d08c6678db557",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Public-C",
              "Scheme": "public",
              "aws-cdk:subnet-name": "Public",
              "aws-cdk:subnet-type": "Public"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Public-C",
              "Scheme": "public",
              "aws-cdk:subnet-name": "Public",
              "aws-cdk:subnet-type": "Public"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-03c629408074d0766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c629408074d0766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Secure-A",
              "Scheme": "secure",
              "aws-cdk:subnet-name": "Secure",
              "aws-cdk:subnet-type": "Isolated"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Secure-A",
              "Scheme": "secure",
              "aws-cdk:subnet-name": "Secure",
              "aws-cdk:subnet-type": "Isolated"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-0d79d8412c61cbc1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d79d8412c61cbc1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Secure-B",
              "Scheme": "secure",
              "aws-cdk:subnet-name": "Secure",
              "aws-cdk:subnet-type": "Isolated"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Secure-B",
              "Scheme": "secure",
              "aws-cdk:subnet-name": "Secure",
              "aws-cdk:subnet-type": "Isolated"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:subnet/subnet-04f1401b7a5fd5f87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f1401b7a5fd5f87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "547029308115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Secure-C",
              "Scheme": "secure",
              "aws-cdk:subnet-name": "Secure",
              "aws-cdk:subnet-type": "Isolated"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-Subnet-Secure-C",
              "Scheme": "secure",
              "aws-cdk:subnet-name": "Secure",
              "aws-cdk:subnet-type": "Isolated"
            },
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.default",
            "module.network.data.aws_availability_zone.az",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:vpc/vpc-0b16be7e91ed1450b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0406b9259c4565325",
            "default_route_table_id": "rtb-01e0de3a99c631056",
            "default_security_group_id": "sg-0832e7c1d6b52137b",
            "dhcp_options_id": "dopt-07893a2470d0448a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b16be7e91ed1450b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e0de3a99c631056",
            "owner_id": "547029308115",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-VPC"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:547029308115:vpc-endpoint/vpce-0bb333f39a15b011f",
            "cidr_blocks": [
              "16.12.2.0/24",
              "3.5.232.0/22",
              "16.12.0.0/23",
              "52.95.163.0/24",
              "52.95.164.0/23"
            ],
            "id": "vpce-0bb333f39a15b011f",
            "owner_id": "547029308115",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6aa54003",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-004266d28b5ee0b2e",
              "rtb-0c01bb3b423822277",
              "rtb-0d7aae3e1fdfc5851"
            ],
            "service_name": "com.amazonaws.sa-east-1.s3",
            "state": "available",
            "tags": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-S3-Endpoint"
            },
            "tags_all": {
              "EnvName": "MyVPC",
              "Name": "MyVPC-S3-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b16be7e91ed1450b"
          },
          "dependencies": [
            "module.network.aws_vpc.default",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}